# wwm-gvg-discord-bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: client.py
bot/cogs/: configure.py  general.py  gvg_manage.py  signup.py
bot/cogs/ui/: autocomplete.py  embeds.py  role_views.py  views.py
bot/old_cogs/: form.py  gvg_manage.py  gvg_sign_up.py  test_cmds.py
core/: database.py  database_utils.py  models.py
data/: prod.db
services/: config.py  discord_bus.py  signup_service.py
static/js/: roster.js
templates/: base.html  hello.html  roster.html
templates/partials/: roster_rows.html
web/: app.py
