[project]
name = "wwm-gvg-discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "emoji>=2.15.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "tabulate>=0.9.0",
    "uvicorn>=0.40.0",
    "wcwidth>=0.5.3",
]
